# take-home-xs

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml
data/: GPredCR_Score.json  genebass_oprm1_alcohol_intake.tsv
examples/: examply_py.ipynb
xinlu_shi/: README.md  analysis.ipynb  environment.yml
