[project]
name = "Take_home"
version = "0.1.0"
description = "Hauser Group Take Home Assignment"
authors = [
    {name = "jsture", email = "jsmadsen@sund.ku.dk"},
]
dependencies = [
    "pre-commit>=3.7.0",
    "ruff>=0.3.5",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "jupyterlab>=4.1.5"
]

requires-python = ">= 3.10"
readme = "README.md"
license = {text = "MIT"}
